--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 					        <img class="img-fluid post-thumb" src="assets/images/blog/blog-post-thumb-3.jpg" alt="image">
 					    </div>
 					    <div class="col">
-						    <h3 class="title mb-1"><a class="text-link" href="blog-post.html">A Guide to Becoming a Full-Stack Developer</a></h3>
+						    <h3 class="title mb-1"><a class="text-link" href="blog-post.html">Python ile Maske Dedektörü Nasıl Yapılır</a></h3>
 						    <div class="meta mb-1"><span class="date">Published 2 months ago</span><span class="time">15 min read</span><span class="comment"><a class="text-link" href="#">3 comments</a></span></div>
 						    <div class="intro">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies...</div>
 						    <a class="text-link" href="blog-post.html">Read more &rarr;</a>
@@ -134,7 +134,7 @@
 					        <img class="img-fluid post-thumb" src="assets/images/blog/blog-post-thumb-4.jpg" alt="image">
 					    </div>
 					    <div class="col">
-						    <h3 class="title mb-1"><a class="text-link" href="blog-post.html">High Performance JavaScript</a></h3>
+						    <h3 class="title mb-1"><a class="text-link" href="blog-post.html">Html Blok Elementleri Tanıyalım</a></h3>
 						    <div class="meta mb-1"><span class="date">Published 1 month ago</span><span class="time">8 min read</span><span class="comment"><a class="text-link" href="#">12 comments</a></span></div>
 						    <div class="intro">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies...</div>
 						    <a class="text-link" href="blog-post.html">Read more &rarr;</a>
@@ -149,7 +149,7 @@
 					        <img class="img-fluid post-thumb" src="assets/images/blog/blog-post-thumb-5.jpg" alt="image">
 					    </div>
 					    <div class="col">
-						    <h3 class="title mb-1"><a class="text-link" href="blog-post.html">Learn React in 24 Hours</a></h3>
+						    <h3 class="title mb-1"><a class="text-link" href="blog-post.html">Python ile Link Kısaltıcı Nasıl Yapılır</a></h3>
 						    <div class="meta mb-1"><span class="date">Published 2 months ago</span><span class="time">10 min read</span><span class="comment"><a class="text-link" href="#">23 comments</a></span></div>
 						    <div class="intro">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies...</div>
 						    <a class="text-link" href="blog-post.html">Read more &rarr;</a>
@@ -163,7 +163,7 @@
 					        <img class="img-fluid post-thumb" src="assets/images/blog/blog-post-thumb-6.jpg" alt="image">
 					    </div>
 					    <div class="col">
-						    <h3 class="title mb-1"><a class="text-link" href="blog-post.html">How to Build Desktop Apps with HTML, CSS and JavaScript</a></h3>
+						    <h3 class="title mb-1"><a class="text-link" href="blog-post.html">Html Yazım Şekilleri Nelerdir Ve Ne işe Yarar</a></h3>
 						    <div class="meta mb-1"><span class="date">Published 3 months ago</span><span class="time">2 min read</span><span class="comment"><a class="text-link" href="#">1 comment</a></span></div>
 						    <div class="intro">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies...</div>
 						    <a class="text-link" href="blog-post.html">Read more &rarr;</a>
