--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     
     <!-- Theme CSS -->  
     <link id="theme-style" rel="stylesheet" href="assets/css/theme-3.css">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6560718048412631"
+     crossorigin="anonymous"></script>
 
 </head> 
 
