--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 						    <h3 class="title mb-1"><a class="text-link" href="blog-post.html">Python ile Matrix Efektinizi Yapın</a></h3>
 						    <div class="meta mb-1"><span class="date">Published 2 days ago</span><span class="time">5 min read</span><span class="comment"><a class="text-link" href="#">8 comments</a></span></div>
 						    <div class="intro">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies...</div>
-						    <a class="text-link" href="blog-post.html">Read more &rarr;</a>
+						    <a class="text-link" href="pythonmatrix.html">Daha fazla &rarr;</a>
 					    </div><!--//col-->
 				    </div><!--//row-->
 			    </div><!--//item-->
@@ -111,7 +111,7 @@
 						    <h3 class="title mb-1"><a class="text-link" href="blog-post.html">Python El Algılama Sistemi İle Ses Ayarı</a></h3>
 						    <div class="meta mb-1"><span class="date">Published 3 months ago</span><span class="time">3 min read</span><span class="comment"><a class="text-link" href="#">26 comments</a></span></div>
 						    <div class="intro">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies...</div>
-						    <a class="text-link" href="blog-post.html">Read more &rarr;</a>
+						    <a class="text-link" href="blog-post.html">Daha fazla &rarr;</a>
 					    </div><!--//col-->
 				    </div><!--//row-->
 			    </div><!--//item-->
@@ -125,7 +125,7 @@
 						    <h3 class="title mb-1"><a class="text-link" href="blog-post.html">Python ile Maske Dedektörü Nasıl Yapılır</a></h3>
 						    <div class="meta mb-1"><span class="date">Published 2 months ago</span><span class="time">15 min read</span><span class="comment"><a class="text-link" href="#">3 comments</a></span></div>
 						    <div class="intro">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies...</div>
-						    <a class="text-link" href="blog-post.html">Read more &rarr;</a>
+						    <a class="text-link" href="blog-post.html">Daha fazla &rarr;</a>
 					    </div><!--//col-->
 				    </div><!--//row-->
 			    </div><!--//item-->
@@ -139,7 +139,7 @@
 						    <h3 class="title mb-1"><a class="text-link" href="blog-post.html">Html Blok Elementleri Tanıyalım</a></h3>
 						    <div class="meta mb-1"><span class="date">Published 1 month ago</span><span class="time">8 min read</span><span class="comment"><a class="text-link" href="#">12 comments</a></span></div>
 						    <div class="intro">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies...</div>
-						    <a class="text-link" href="blog-post.html">Read more &rarr;</a>
+						    <a class="text-link" href="blog-post.html">Daha fazla &rarr;</a>
 					    </div><!--//col-->
 				    </div><!--//row-->
 			    </div><!--//item-->
@@ -154,7 +154,7 @@
 						    <h3 class="title mb-1"><a class="text-link" href="blog-post.html">Python ile Link Kısaltıcı Nasıl Yapılır</a></h3>
 						    <div class="meta mb-1"><span class="date">Published 2 months ago</span><span class="time">10 min read</span><span class="comment"><a class="text-link" href="#">23 comments</a></span></div>
 						    <div class="intro">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies...</div>
-						    <a class="text-link" href="blog-post.html">Read more &rarr;</a>
+						    <a class="text-link" href="blog-post.html">Daha fazla &rarr;</a>
 					    </div><!--//col-->
 				    </div><!--//row-->
 			    </div><!--//item-->
@@ -168,7 +168,7 @@
 						    <h3 class="title mb-1"><a class="text-link" href="blog-post.html">Html Yazım Şekilleri Nelerdir Ve Ne işe Yarar</a></h3>
 						    <div class="meta mb-1"><span class="date">Published 3 months ago</span><span class="time">2 min read</span><span class="comment"><a class="text-link" href="#">1 comment</a></span></div>
 						    <div class="intro">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies...</div>
-						    <a class="text-link" href="blog-post.html">Read more &rarr;</a>
+						    <a class="text-link" href="blog-post.html">Daha fazla &rarr;</a>
 					    </div><!--//col-->
 				    </div><!--//row-->
 			    </div><!--//item-->
