--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 					        <img class="img-fluid post-thumb " src="assets/images/blog/blog-post-thumb-1.jpg" alt="image">
 					    </div>
 					    <div class="col">
-						    <h3 class="title mb-1"><a class="text-link" href="blog-post.html">Python ile Matrix Efektinizi Yapın</a></h3>
+						    <h3 class="title mb-1"><a class="text-link" href="pythonmatrix.html">Python ile Matrix Efektinizi Yapın</a></h3>
 						    <div class="meta mb-1"><span class="date">Published 2 days ago</span><span class="time">5 min read</span><span class="comment"><a class="text-link" href="#">8 comments</a></span></div>
 						    <div class="intro">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies...</div>
 						    <a class="text-link" href="pythonmatrix.html">Daha fazla &rarr;</a>
