--- a/index.html
+++ b/index.html
@@ -96,9 +96,9 @@
 					    </div>
 					    <div class="col">
 						    <h3 class="title mb-1"><a class="text-link" href="pythonmatrix.html">Python ile Matrix Efektinizi Yapın</a></h3>
-						    <div class="meta mb-1"><span class="date">Published 2 days ago</span><span class="time">5 min read</span><span class="comment"><a class="text-link" href="#">8 comments</a></span></div>
+						    <div class="meta mb-1"><span class="date">Published 21/02/2022</span><span class="time">python</span><span class="comment"><a class="text-link" href="#">12:29</a></span></div>
 						    <div class="intro">Python ile matrix efekti yapımı hakkında bir video paylaşmıştım, <a href="https://youtu.be/XVRuvn7QVO4"> buradan</a> ulaşabilirsiniz. şimdi gelin basit bir şekilde python ile
-				    matrix efekti nasıl yapılır bunu görelim...</div>
+				    matrix efekti nasıl yapılır bunu görelimc...</div>
 						    <a class="text-link" href="pythonmatrix.html">Daha fazla &rarr;</a>
 					    </div><!--//col-->
 				    </div><!--//row-->
