--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link id="theme-style" rel="stylesheet" href="assets/css/theme-3.css">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6560718048412631"
      crossorigin="anonymous"></script>
-
+    <link rel="img_src" href="assets/images/about-me.png">
 </head> 
 
 <body>
