--- a/pythonmatrix.html
+++ b/pythonmatrix.html
@@ -22,6 +22,7 @@
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6560718048412631"
      crossorigin="anonymous"></script>
 
+    <link rel="image_src" href="https://firebasestorage.googleapis.com/v0/b/exchange-9874c.appspot.com/o/markus-spiske-iar-afB0QQw-unsplash.jpg?alt=media&token=2c00eb55-fced-4290-84b8-b9aa3a174c39" />
 
 </head> 
 
@@ -253,7 +254,7 @@ while tm < 30:
 			    <h2 class="title">İlgini Çekebilecek İçerik</h2>
 			    <p>Daha fazla içerik mi? arıyorsun, buraya bir göz at istersen</p>
                 <figure class="promo-figure">
-			        <a href="#" target="_blank"><img class="img-fluid" src="https://firebasestorage.googleapis.com/v0/b/exchange-9874c.appspot.com/o/christopher-gower-m_HRfLhgABo-unsplash.jpg?alt=media&token=59b6806a-1af7-4181-885e-a284a52a1d7f" alt="image"></a>
+			        <a href="#" target="_blank"><img class="img-fluid" src="" alt="image"></a>
 			    </figure>
 		    </div><!--//container-->
 	    </section><!--//promo-section-->
