--- a/pythonmatrix.html
+++ b/pythonmatrix.html
@@ -254,7 +254,7 @@ while tm < 30:
 			    <h2 class="title">İlgini Çekebilecek İçerik</h2>
 			    <p>Daha fazla içerik mi? arıyorsun, buraya bir göz at istersen</p>
                 <figure class="promo-figure">
-			        <a href="#" target="_blank"><img class="img-fluid" src="" alt="image"></a>
+			        <a href="#" target="_blank"><img class="img-fluid" src="https://firebasestorage.googleapis.com/v0/b/exchange-9874c.appspot.com/o/christopher-gower-m_HRfLhgABo-unsplash.jpg?alt=media&token=59b6806a-1af7-4181-885e-a284a52a1d7f" alt="image"></a>
 			    </figure>
 		    </div><!--//container-->
 	    </section><!--//promo-section-->
